# VQA-AD-CTU

./: .gitignore  README.md  pyproject.toml  requirements.txt
assets/: README.md
ckpts/: README.md
data/: README.md
docs/: 078e6d7a3d4a429bba404bf12c7a98f2_7b4ac539f491478fba47e53ebaec3c0f_demo.html  0ced08ea43754420a23b2fbec667a763_ec7a8148031849c7b73ae314fb7f0dc6_demo.html  22daa579e9d54040b3f76a4eeef3a587_86c38e5cfafc4ec89c6ab7f6e5b85153_demo.html  2bbae5e654224cbeb5884c471e2ad05e_d2eeab4dc9514ee2bce9800eaadd3c17_demo.html  2c96ff6afc9e4cf7bc8b107fce955c1f_c61f77e2820743f696047eec21d7807a_demo.html  2ffd7e2a1daf4b928464ddb2ed3dca59_304da7079b434f44aa7447833de8166a_demo.html  34a9823fac0d4b9db30898e00b5f9f9c_a4a6771cbd1349e4bc593712d903a05a_demo.html  45275e709d4a4b0592d57850d8e8bd8d_539e46e59fb943b0a1df493004907c1f_demo.html  59530445fcc04c2090bfaf63f342f794_79025431db8a4c8083c4e381d9704e62_demo.html  5b9c64f03f8b4a4f8189a18d74f866c2_afa2aba2422f453b9e82f2b9238eb471_demo.html  73b16c26a0d24c7a841e4cbe5d0d7878_858559433d1e49498c50db548e19cadd_demo.html  7d6006ae9d8f406aa99756156ea4f70a_0b0758daa8c94fbfabf45d0e24e1e37e_demo.html  7d6006ae9d8f406aa99756156ea4f70a_f7da7dd25696465baadbd241c7c04b0b_demo.html  7ef04cdbd04c4b67a22f59502cb8fac6_c800555e7f894aeb8460388f33e1bc15_demo.html  c5b36e5275cc4a2285d095e87347c49a_04de5a1d4f8b45a3a62d6bf0ee07c715_demo.html  c949ec2cca7047bdb67dce64b6c3586a_5efb275a2b1343a88e82c6cc08fff267_demo.html  c949ec2cca7047bdb67dce64b6c3586a_c831ac037c0e4cd2b9fc737b31d5461d_demo.html  index.html  (+9 more)
evaluation/: README.md  print_results.py
(+100 files in other folders)
